--- a/styles.css
+++ b/styles.css
@@ -1,31 +1,101 @@
 /* Palette URL: http://paletton.com/#uid=70s0u0kllll9msUfmp7rkhzzYdM */
-/*
-:root {
-  var-color-primary-0: #AA6A39;
-  var-color-primary-1: #E6C0A3;
-  var-color-primary-2: #C89268;
-  var-color-primary-3: #8C4814;
-  var-color-primary-4: #6E3000;
-  var-color-secondary-1-0: #AA8339;
-  var-color-secondary-1-1: #E6CFA3;
-  var-color-secondary-1-2: #C8A768;
-  var-color-secondary-1-3: #8C6314;
-  var-color-secondary-1-4: #6E4800;
-  var-color-secondary-2-0: #2D4471;
-  var-color-secondary-2-1: #717F99;
-  var-color-secondary-2-2: #4C5F85;
-  var-color-secondary-2-3: #162E5D;
-  var-color-secondary-2-4: #061D49;
-  var-color-complement-0: #236863;
-  var-color-complement-1: #648E8B;
-  var-color-complement-2: #407B77;
-  var-color-complement-3: #0D5651;
-  var-color-complement-4: #00433E;
-}
-*/
 
-body .strip .hole circle table {
-  stroke: red;
-  fill: blue;
-  color: #AA8339;
+.color-primary-0,
+.holeDecorator {
+  color: #AA6A39;
+  fill: #AA6A39;
+  stroke: #AA6A39;
+}
+
+.color-primary-1,
+.strip,
+.hole {
+  color: #E6C0A3;
+  fill: #E6C0A3;
+  stroke: #E6C0A3
+}
+
+.color-primary-2 {
+  color: #C89268
+}
+
+.color-primary-3 {
+  color: #8C4814
+}
+
+.color-primary-4 {
+  color: #6E3000
+}
+
+.color-secondary-1-0 {
+  color: #AA8339
+}
+
+.color-secondary-1-1 {
+  color: #E6CFA3
+}
+
+.color-secondary-1-2 {
+  color: #C8A768
+}
+
+.color-secondary-1-3 {
+  color: #8C6314
+}
+
+.color-secondary-1-4 {
+  color: #6E4800
+}
+
+.color-secondary-2-0 {
+  color: #2D4471
+}
+
+.color-secondary-2-1 {
+  color: #717F99
+}
+
+.color-secondary-2-2 {
+  color: #4C5F85
+}
+
+.color-secondary-2-3 {
+  color: #162E5D
+}
+
+.color-secondary-2-4 {
+  color: #061D49
+}
+
+.color-complement-0,
+.unconnectedFinger {
+  color: #236863;
+  fill: #236863;
+  stroke: #236863;
+}
+
+.color-complement-1,
+.connectedFinger {
+  color: #648E8B;
+  fill: #648E8B;
+  stroke: #648E8B;
+}
+
+.color-complement-2 {
+  color: #407B77
+}
+
+.color-complement-3 {
+  color: #0D5651
+}
+
+.color-complement-4 {
+  color: #00433F
+}
+/******************************************/
+
+.hole {}
+
+.holeDecorator {
+  fill-opacity: 0.0;
 }
