temp: disperate try to make grayscale work in chrome

--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@
 
 .body {
   fill: #e6c88c;
+  fill-opacity: 1.0;
   stroke: #b5975a;
 }
 
@@ -63,9 +64,19 @@
   stroke: #232323;
 }
 
+.paletteItem0 {
+  fill-opacity: 0.0;
+  -webkit-filter: grayscale(100%);
+  -moz-filter: grayscale(100%);
+  -ms-filter: grayscale(100%);
+  -o-filter: grayscale(100%);
+  filter: grayscale(100%);
+  filter: url(grayscale.svg#greyscale);
+  filter: gray;
+  /* IE 6-9 */
+}
+
 .paletteItem {
-  fill-opacity: 0.5;
-  filter:url(#paletteItemFilter);
-  -webkit-filter: blur(5px);
-  filter: blur(5px);
+  fill-opacity: 0.0;
+  -webkit-filter: grayscale(100%);
 }
